--- a/stryles.css
+++ b/stryles.css
@@ -1,19 +1,88 @@
 :root {
---colorUno:#538392;
---colorDos:#6295A2;
---colorTres:#80B9AD;
---colorCua:#B3E2A7;
+    --colorUno: #538392;
+    --colorDos: #6295A2;
+    --colorTres: #80B9AD;
+    --colorCua: #B3E2A7;
 }
 
-.zona__encriptado{
-
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkblue;
 }
 
-.zona__desencriptar{
+#texto__encriptable{
+    font-weight: bold;
+    font-size: 1.5rem;
+    width: 400px;
+    height: 400px;
+    border: none;
+    border-radius: 10px;
   
+    background-color: whitesmoke;
+    margin: 0;
+    padding: 0;
+
+}
+button{
+    padding: 10px;
+    width: 200px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.btn-encriptar{
+    color: whitesmoke;
+    background-color: darkblue;
+    border: none;
+}
+.btn-desencriptar,.btn-copiar{
+    border: 1px solid darkblue;
+    background-color: #D8DFE8;
+    color: darkblue;
+
+}
+.zona__desencriptar{
+    width: 400px;
+    height: 500px;
+    background-color: whitesmoke;
+    border-radius: 20px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+  align-items: center;
+
 }
 
-.contenido{ 
+.contenido {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+   
+}
+
+.advertencia {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    
+    width: 400px;
+    height: 25px;
+    border: none;
+    margin: 10px 0px;
+    padding: 0;
+}
+
+h4 {
+    margin: 0;
+    padding-top: 5px;
+}
+.keys-user{
+    display: none;
+    flex-direction: column;
+    margin: 10px;
+    padding: 10px;
+    background-color: #6295A2;
+    border-radius: 20px;
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
